<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="org.woowatechcamp.githubapplication.domain.entity.SearchInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/size_profile_24"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/CornerSize50Percent"
            tools:src="@color/purple" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{data.owner}"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            tools:text="@string/jetbrains" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{data.title}"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_id"
            tools:text="@string/jetbrains" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:text="@{data.description}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="@string/search_description" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.starCount}"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@+id/iv_star"
            tools:text="@string/star_count" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_type"
            android:layout_width="@dimen/size_language_type_14dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/tv_star_count"
            app:layout_constraintTop_toTopOf="@+id/iv_star"
            app:shapeAppearance="@style/CornerSize50Percent"
            tools:src="@color/purple" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@{data.language}"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_type"
            app:layout_constraintStart_toEndOf="@+id/iv_type"
            app:layout_constraintTop_toTopOf="@+id/iv_type"
            tools:text="@string/kotlin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>