<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="org.woowatechcamp.githubapplication.domain.entity.UserModel" />

        <variable
            name="user"
            type="org.woowatechcamp.githubapplication.domain.entity.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_left_24">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.05"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/primary"
            app:imageUrl="@{user.imgUrl}"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
            app:shapeAppearance="@style/CornerSize50Percent" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:lineHeight="27.72sp"
            android:text="@{user.name}"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_profile_nickname"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_profile"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/tv_profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="16sp"
            android:text="@{user.nickname}"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_profile_bio"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

        <TextView
            android:id="@+id/tv_profile_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_navy_radius_7"
            android:lineHeight="16sp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@{user.bio}"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_nickname" />

        <View
            android:id="@+id/line_profile"
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_marginTop="16dp"
            android:background="@color/navy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

        <TextView
            android:id="@+id/tv_profile_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:drawablePadding="11dp"
            android:lineHeight="16sp"
            android:text="@{user.location}"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_location_24"
            app:drawableTint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/line_profile" />


        <TextView
            android:id="@+id/tv_profile_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:drawablePadding="11dp"
            android:lineHeight="16sp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_link_24"
            app:drawableTint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_location"
            app:underlineText="@{user.blog}" />

        <TextView
            android:id="@+id/tv_profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:drawablePadding="11dp"
            android:lineHeight="16sp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_mail_24"
            app:drawableTint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_link"
            app:underlineText="@{user.email}" />

        <TextView
            android:id="@+id/tv_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:drawablePadding="11dp"
            android:lineHeight="16sp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@{user.followInfo}"
            app:drawableStartCompat="@drawable/ic_user_24"
            app:drawableTint="@color/grey"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_navy_radius_14"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_person"
            app:layout_constraintTop_toBottomOf="@+id/tv_person">

            <ImageView
                android:id="@+id/iv_repo"
                android:layout_width="@dimen/size_icon_40"
                android:layout_height="0dp"
                android:background="@drawable/rectangle_primary_radius_14"
                android:padding="8dp"
                android:scaleType="center"
                android:src="@drawable/ic_bookmark_24"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/repositories"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_repo"
                app:layout_constraintStart_toEndOf="@+id/iv_repo"
                app:layout_constraintTop_toTopOf="@+id/iv_repo" />

            <ImageView
                android:id="@+id/iv_starred"
                android:layout_width="@dimen/size_icon_40"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_primary_radius_14"
                android:padding="8dp"
                android:scaleType="center"
                android:src="@drawable/ic_star_border_24"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_repo"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_starred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starred"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_starred"
                app:layout_constraintStart_toStartOf="@+id/tv_repo"
                app:layout_constraintTop_toTopOf="@+id/iv_starred" />

            <TextView
                android:id="@+id/tv_repo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(user.repoNum)}"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_repo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_repo"
                tools:text="@string/star_count" />

            <TextView
                android:id="@+id/tv_star_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(user.starredNum)}"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_starred"
                app:layout_constraintEnd_toEndOf="@+id/tv_repo_count"
                app:layout_constraintTop_toTopOf="@+id/tv_starred"
                tools:text="@string/star_count" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>